fix: alignment of icon while syncing

--- a/src/scss/components/_components.sidebar.scss
+++ b/src/scss/components/_components.sidebar.scss
@@ -338,7 +338,7 @@
 
       .icon-sync {
         font-size: inherit;
-        transform-origin: 50% 55%;
+        transform-origin: 50% 48%;
 
         &::before {
           @include icon(arrow-triangle-2-circlepath);
